# QR-Check-front2-main

./: .coverage  .gitignore  README.md  pyproject.toml
.history/: .env_20250805194326  .env_20250807221512
.history/qrcheck-frontend/src/components/: Footer_20250808071837.jsx  Footer_20250810212102.jsx  Footer_20250810212250.jsx
.history/qrcheck-frontend/src/pages/: Login_20250805194326.jsx  Login_20250806221001.jsx  Login_20250807092000.jsx  Profile_20250807205558.jsx  Profile_20250807205616.jsx  Profile_20250807211614.jsx  Profile_20250807213217.jsx  Profile_20250807213258.jsx  Profile_20250807213536.jsx  (+12 more)
.lh/: .env.json
.lh/qrcheck-frontend/: .env.json
migrations/: env.py
migrations/versions/: 0a50ce8d8fc8_recriando_tabelas_em_uma_só_migration.py
populate_db/: create_superadmin.py  populate_necessidades.py  populate_ocupacoes.py  run_populates.py
qrcheck/: .env  app.py  check_env.py  constants.py  create_env.py  database.py  fix_env.py  log_app.py  security.py  settings.py  simple_db_test.py  start_backend.py  test_connection.py  test_db_connection.py  test_with_encoding.py
qrcheck-frontend/: index.html  package-lock.json  package.json  vite.config.js
qrcheck-frontend/src/: App.jsx  main.jsx
qrcheck-frontend/src/components/: ConnectionTest.jsx  Footer.jsx  Header.jsx  PrivateRoute.jsx
qrcheck-frontend/src/context/: AuthContext.jsx
qrcheck-frontend/src/pages/: Home.jsx  Login.jsx  Profile.jsx
qrcheck-frontend/src/routes/: index.jsx
qrcheck-frontend/src/services/: administradorService.js  api.js  eventoService.js  participanteService.js
qrcheck/handlers/: postgresql_handler.py  pydantic_handler.py
qrcheck/models/: AdministradorModels.py  EntityModels.py  EventoModels.py  ParticipanteModels.py
qrcheck/routers/: AdminParticipantesRouter.py  AdministradoresRouter.py  AuthenticateRouter.py  EventosRouter.py  NecessidadesRouter.py  OcupacoesRouter.py  ParticipantesRouter.py
qrcheck/schemas/: AdministradoresSchema.py  EventoSchema.py  NecessidadesSchema.py  OcupacaoSchema.py  ParticipanteSchema.py  TokenSchema.py
qrcheck/services/: participante_service.py
qrcheck/utils/: validators_utils.py
tests/: conftest.py  test_ocupacoes.py
(+44 files in other folders)
